--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "Vehicle history provider for Poland based on car plate and vin number.",
   "main": "./index.js",
   "dependencies": {
-    "html-entities": "^1.1.1",
+    "async": "^0.9.0",
+    "html-entities": "^1.1.2",
     "request": "^2.51.0",
+    "vehicle-history-model": "^0.9.2",
     "winston": "^0.8.3",
-    "www-fields-parser": "^0.1.4",
-    "vehicle-history-model": "^0.9.2"
+    "www-fields-parser": "^0.1.4"
   },
   "devDependencies": {
-    "config": "^1.9.0",
+    "config": "^1.10.0",
     "chai": "^1.10.0",
     "istanbul": "^0.3.5",
     "mocha": "^2.1.0",
