--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "async": "^0.9.0",
     "html-entities": "^1.1.2",
     "request": "^2.51.0",
-    "vehicle-history-model": "^0.9.2",
+    "vehicle-history-model": "^0.9.3",
     "winston": "^0.8.3",
     "www-fields-parser": "^0.1.4"
   },
@@ -35,7 +35,13 @@
     "vehicle",
     "history",
     "provider",
-    "poland"
+    "web",
+    "registration",
+    "marks",
+    "number",
+    "plate",
+    "reg",
+    "numberplate"
   ],
   "author": {
     "name": "Zenedith",
