--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "assert-plus": "1.0.0",
     "html-entities": "1.2.0",
     "request": "2.69.0",
-    "vehicle-history-model": "0.11.0",
-    "winston": "2.1.1",
+    "vehicle-history-model": "^0.13.0",
+    "winston": "^2.2.0",
     "winston-loggly": "1.3.1",
     "www-fields-parser": "0.1.10"
   },
