--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "www-fields-parser": "0.1.10"
   },
   "devDependencies": {
-    "config": "1.20.1",
     "chai": "3.5.0",
+    "config": "^1.20.3",
     "istanbul": "0.4.3",
     "mocha": "2.4.5",
     "rewire": "2.5.1"
