--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "chai": "3.5.0",
     "config": "1.21.0",
     "istanbul": "0.4.4",
-    "mocha": "3.0.1",
+    "mocha": "^3.0.2",
     "rewire": "2.5.2"
   },
   "scripts": {
