--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "dependencies": {
     "assert-plus": "1.0.0",
     "html-entities": "1.2.0",
-    "request": "2.76.0",
+    "request": "^2.78.0",
     "vehicle-history-model": "1.0.0",
-    "winston": "2.2.0",
+    "winston": "^2.3.0",
     "winston-loggly": "1.3.1",
     "www-fields-parser": "0.1.10"
   },
   "devDependencies": {
     "chai": "3.5.0",
-    "config": "1.21.0",
+    "config": "^1.24.0",
     "istanbul": "0.4.5",
     "mocha": "3.1.2",
     "rewire": "2.5.2"
