--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "chai": "3.5.0",
     "config": "1.24.0",
     "istanbul": "0.4.5",
-    "mocha": "3.1.2",
+    "mocha": "^3.2.0",
     "rewire": "2.5.2"
   },
   "scripts": {
