--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "vehicle-history-provider-web",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "Vehicle history web provider using car plate and vin number.",
   "main": "./index.js",
   "dependencies": {
     "assert-plus": "1.0.0",
     "html-entities": "1.2.0",
     "request": "2.79.0",
-    "vehicle-history-model": "1.0.0",
+    "vehicle-history-model": "1.2.0",
     "winston": "2.3.1",
     "winston-loggly": "1.3.1",
     "www-fields-parser": "0.1.10"
@@ -17,10 +17,11 @@
     "config": "1.24.0",
     "istanbul": "0.4.5",
     "mocha": "3.2.0",
+    "nsp": "2.6.2",
     "rewire": "2.5.2"
   },
   "scripts": {
-    "prepublish": "npm prune",
+    "prepublish": "npm prune && node_modules/nsp/bin/nsp check",
     "test": "mocha --recursive test",
     "test-cov": "istanbul cover node_modules/mocha/bin/_mocha -- --check-leaks --recursive test",
     "test-travis": "istanbul cover node_modules/mocha/bin/_mocha --report lcovonly -- --recursive test"
@@ -51,9 +52,9 @@
   "license": "MIT",
   "homepage": "https://github.com/vehicle-history/npm-vehicle-history-provider-web",
   "engines": {
-    "node": ">=7.0.0"
+    "node": ">=6.0.0"
   },
   "readmeFilename": "README.md",
-  "_id": "vehicle-history-provider-web@1.0.4",
-  "_from": "vehicle-history-provider-web@^1.0.4"
+  "_id": "vehicle-history-provider-web@1.1.0",
+  "_from": "vehicle-history-provider-web@^1.1.0"
 }
