--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "assert-plus": "1.0.0",
     "html-entities": "1.2.0",
     "request": "2.79.0",
-    "vehicle-history-model": "1.2.0",
+    "vehicle-history-model": "^1.2.1",
     "winston": "2.3.1",
     "winston-loggly": "1.3.1",
     "www-fields-parser": "0.1.10"
