--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "assert-plus": "1.0.0",
     "html-entities": "1.2.0",
-    "request": "2.79.0",
+    "request": "^2.80.0",
     "vehicle-history-model": "^1.2.1",
     "winston": "2.3.1",
     "winston-loggly": "1.3.1",
