--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./index.js",
   "dependencies": {
     "assert-plus": "1.0.0",
-    "html-entities": "1.2.0",
+    "html-entities": "^1.2.1",
     "request": "2.81.0",
     "vehicle-history-model": "^1.2.1",
     "winston": "2.3.1",
@@ -16,7 +16,7 @@
     "chai": "3.5.0",
     "config": "1.25.1",
     "istanbul": "0.4.5",
-    "mocha": "3.2.0",
+    "mocha": "^3.3.0",
     "nsp": "2.6.3",
     "rewire": "2.5.2"
   },
