--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "www-fields-parser": "0.1.10"
   },
   "devDependencies": {
-    "chai": "4.0.2",
+    "chai": "^4.1.0",
     "config": "1.26.1",
     "istanbul": "0.4.5",
     "mocha": "3.4.2",
