--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "devDependencies": {
     "chai": "4.1.1",
-    "config": "1.26.1",
+    "config": "^1.26.2",
     "istanbul": "0.4.5",
     "mocha": "3.5.0",
     "nsp": "2.7.0",
