--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "chai": "4.1.2",
     "config": "1.26.2",
     "istanbul": "0.4.5",
-    "mocha": "4.0.0",
+    "mocha": "^4.0.1",
     "nsp": "2.8.1",
     "rewire": "2.5.2"
   },
