--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "devDependencies": {
     "chai": "4.1.2",
-    "config": "1.28.1",
+    "config": "^1.29.0",
     "istanbul": "0.4.5",
     "mocha": "4.0.1",
     "nsp": "3.1.0",
