--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   },
   "devDependencies": {
     "chai": "4.1.2",
-    "config": "1.28.1",
+    "config": "^1.29.0",
     "istanbul": "0.4.5",
-    "mocha": "4.0.1",
+    "mocha": "^4.1.0",
     "nsp": "3.1.0",
     "rewire": "3.0.2"
   },
