--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "devDependencies": {
     "chai": "4.1.2",
-    "config": "1.29.2",
+    "config": "^1.29.4",
     "istanbul": "0.4.5",
     "mocha": "5.0.0",
     "nsp": "3.1.0",
