--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "chai": "4.1.2",
     "config": "1.30.0",
     "istanbul": "0.4.5",
-    "mocha": "5.0.1",
+    "mocha": "^5.0.2",
     "nsp": "3.2.1",
     "rewire": "3.0.2"
   },
