--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "html-entities": "1.2.1",
     "request": "2.83.0",
     "vehicle-history-model": "^1.2.1",
-    "winston": "2.4.0",
+    "winston": "3.0.0-rc2",
     "winston-loggly": "1.3.1",
     "www-fields-parser": "0.1.10"
   },
@@ -16,7 +16,7 @@
     "chai": "4.1.2",
     "config": "1.30.0",
     "istanbul": "0.4.5",
-    "mocha": "5.0.1",
+    "mocha": "5.0.4",
     "nsp": "3.2.1",
     "rewire": "3.0.2"
   },
