--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "istanbul": "0.4.5",
     "mocha": "5.0.5",
     "nsp": "3.2.1",
-    "rewire": "3.0.2"
+    "rewire": "^4.0.0"
   },
   "scripts": {
     "prepublish": "npm prune && node_modules/nsp/bin/nsp check",
