--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "chai": "4.1.2",
     "config": "1.30.0",
     "istanbul": "0.4.5",
-    "mocha": "5.1.0",
+    "mocha": "^5.1.1",
     "nsp": "3.2.1",
-    "rewire": "4.0.0"
+    "rewire": "^4.0.1"
   },
   "scripts": {
     "prepublish": "npm prune && node_modules/nsp/bin/nsp check",
