--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "html-entities": "1.2.1",
     "request": "2.87.0",
     "vehicle-history-model": "^1.2.1",
-    "winston": "3.0.0-rc2",
+    "winston": "^3.0.0",
     "winston-loggly": "1.3.1",
     "www-fields-parser": "0.1.10"
   },
