--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "devDependencies": {
     "chai": "4.1.2",
-    "config": "1.30.0",
+    "config": "^1.31.0",
     "istanbul": "0.4.5",
     "mocha": "5.2.0",
     "nsp": "3.2.1",
