--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "dependencies": {
     "assert-plus": "1.0.0",
     "html-entities": "1.2.1",
-    "request": "2.87.0",
+    "request": "^2.88.0",
     "vehicle-history-model": "^1.2.1",
-    "winston": "3.0.0",
+    "winston": "^3.1.0",
     "winston-loggly": "1.3.1",
     "www-fields-parser": "0.1.10"
   },
   "devDependencies": {
-    "chai": "4.1.2",
-    "config": "1.30.0",
+    "chai": "^4.2.0",
+    "config": "^2.0.1",
     "istanbul": "0.4.5",
     "mocha": "5.2.0",
     "nsp": "3.2.1",
